--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,13 +66,14 @@ jobs:
         [Install]
         WantedBy=multi-user.target" | sudo tee /etc/systemd/system/lifeline-backend.service'
         
-        # Create nginx config
+        # Create nginx config with proper SSL setup
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo yum install -y openssl && sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/ssl-cert-snakeoil.key -out /etc/ssl/certs/ssl-cert-snakeoil.pem -subj "/C=US/ST=State/L=City/O=Organization/CN=localhost" || true'
+        
         ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "server {
             listen 80;
             listen 443 ssl;
             server_name _;
             
-            # For HTTPS, use self-signed cert (optional)
             ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
             ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
             
@@ -88,8 +89,15 @@ jobs:
                 proxy_set_header Host \$host;
                 proxy_set_header X-Real-IP \$remote_addr;
                 proxy_set_header X-Forwarded-Proto \$scheme;
+                proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
             }
         }" | sudo tee /etc/nginx/conf.d/lifeline.conf'
+        
+        # Remove default nginx config that might conflict
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo rm -f /etc/nginx/conf.d/default.conf /etc/nginx/sites-enabled/default'
+        
+        # Test nginx config before starting
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo nginx -t'
         
         # Start services
         ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo systemctl daemon-reload && sudo systemctl enable lifeline-backend && sudo systemctl start lifeline-backend && sudo systemctl enable nginx && sudo systemctl start nginx'
