--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,32 +84,48 @@ jobs:
         [Install]
         WantedBy=multi-user.target" | sudo tee /etc/systemd/system/lifeline-backend.service'
         
-        # Create nginx config with proper SSL setup
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo mkdir -p /etc/ssl/private /etc/ssl/certs && sudo yum install -y openssl && sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/ssl-cert-snakeoil.key -out /etc/ssl/certs/ssl-cert-snakeoil.pem -subj "/C=US/ST=State/L=City/O=Organization/CN=localhost"'
+        # Create nginx config with proper HTTPS setup for voice features
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo mkdir -p /etc/ssl/private /etc/ssl/certs && sudo yum install -y openssl && sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/lifeline.key -out /etc/ssl/certs/lifeline.crt -subj "/C=US/ST=State/L=City/O=LifeLine/CN=44.205.249.20"'
         
-        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "server {
-            listen 80;
-            listen 443 ssl;
-            server_name _;
-            
-            ssl_certificate /etc/ssl/certs/ssl-cert-snakeoil.pem;
-            ssl_certificate_key /etc/ssl/private/ssl-cert-snakeoil.key;
-            
-            root /home/ec2-user/lifeline/frontend;
-            index index.html;
-            
-            location / {
-                try_files \$uri \$uri/ /index.html;
-            }
-            
-            location /api {
-                proxy_pass http://127.0.0.1:8000;
-                proxy_set_header Host \$host;
-                proxy_set_header X-Real-IP \$remote_addr;
-                proxy_set_header X-Forwarded-Proto \$scheme;
-                proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-            }
-        }" | sudo tee /etc/nginx/conf.d/lifeline.conf'
+        ssh -i private_key ${USER_NAME}@${HOSTNAME} 'echo "# Redirect HTTP to HTTPS for voice features
+server {
+    listen 80;
+    server_name _;
+    return 301 https://\$server_name\$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name _;
+    
+    # SSL Configuration for voice features
+    ssl_certificate /etc/ssl/certs/lifeline.crt;
+    ssl_certificate_key /etc/ssl/private/lifeline.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    
+    # Security headers for HTTPS
+    add_header Strict-Transport-Security \"max-age=31536000; includeSubDomains\" always;
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    
+    root /home/ec2-user/lifeline/frontend;
+    index index.html;
+    
+    location / {
+        try_files \$uri \$uri/ /index.html;
+    }
+
+    location /api {
+        proxy_pass http://127.0.0.1:8000;
+        proxy_set_header Host \$host;
+        proxy_set_header X-Real-IP \$remote_addr;
+        proxy_set_header X-Forwarded-Proto \$scheme;
+        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host \$server_name;
+    }
+}" | sudo tee /etc/nginx/conf.d/lifeline.conf'
         
         # Remove default nginx config that might conflict
         ssh -i private_key ${USER_NAME}@${HOSTNAME} 'sudo rm -f /etc/nginx/conf.d/default.conf /etc/nginx/sites-enabled/default'
